Avoid jump to the top when going to password reset

--- a/css/index.styl
+++ b/css/index.styl
@@ -301,6 +301,7 @@ breakpoint(point, value = 0)
       .auth0-lock-alternative-link
         font-size 11px
         color #333332
+        cursor pointer
         margin-bottom 0
 
   .auth0-lock-input-block
